--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -2,3 +2,9 @@ FROM            python:3.6.5-slim
 MAINTAINER      blessmht@gmail.com
 
 RUN             apt -y update && apt -y dist-upgrade
+
+# 로컬의 requirements.txt 파일을 /srv/에 복사 후 pip install 실행
+# (build 하는 환경에 requirements.txt 가 있어야 함)
+COPY            ./requirements.txt  /srv/
+
+RUN             pip install -r  /srv/requirements.txt
