--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -2,7 +2,8 @@ FROM            python:3.6.5-slim
 MAINTAINER      blessmht@gmail.com
 
 RUN             apt -y update && apt -y dist-upgrade
-
+RUN             apt -y install build-essential
+RUN             apt -y install nginx supervisor
 # 로컬의 requirements.txt 파일을 /srv/에 복사 후 pip install 실행
 # (build 하는 환경에 requirements.txt 가 있어야 함)
 COPY            ./requirements.txt  /srv/
