eb deploy를 위한 Dockerfile설정

--- a/.gitignore
+++ b/.gitignore
@@ -241,5 +241,7 @@ venv.bak/
 ### Python Patch ###
 .venv/
 
-
-# End of https://www.gitignore.io/api/git,linux,macos,django,python,pycharm+all
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
